Add rerank API
